src/test/resources/failing/fail62.pnd
@text P(x), Q(r) <- foobar(x, r)